WIP - trying to get the {"key": "data_name"} paired dictionary by recursively call a function

--- a/integration_pynb.ipynb
+++ b/integration_pynb.ipynb
@@ -181,29 +181,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(records)"
+    "def get_col_names(form_id):\n",
+    "    \"\"\"Summary\n",
+    "    get a dictionary with {\"key\": \"label\"} pair for all columns in a data\n",
+    "    base\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    Args:\n",
+    "        form_id (TYPE): Description\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \"\"\"\n",
+    "\n",
+    "    form = fulcrum.forms.find(form_id)\n",
+    "    elements = form.get(\"form\").get(\"elements\")\n",
+    "\n",
+    "    col_names = {}\n",
+    "\n",
+    "    for element in elements:\n",
+    "    \t# column = {element.get(\"key\"): element.get(\"label\")}\n",
+    "    \t# columns.append(column)\n",
+    "        col_names[element.get(\"key\")] = element.get(\"data_name\")\n",
+    "\n",
+    "    return col_names"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "type(form)"
+    "def get_records(form_id):\n",
+    "    \"\"\"Summary\n",
+    "    \n",
+    "    Args:\n",
+    "        form_id (TYPE): Description\n",
+    "    \"\"\"\n",
+    "    records_dirty = fulcrum.records.search(url_params = {\"form_id\":form_id})\n",
+    "    \n",
+    "    records_dirty = records_dirty[\"records\"]\n",
+    "    \n",
+    "    \n",
+    "    records = pd.DataFrame.from_dict(records_dirty[\"form_values\"])\n",
+    "    \n",
+    "    return records"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "form[\"form\"][\"elements\"]"
+    "def interpret_col_name(records):\n",
+    "\n",
+    "    records.rename(columns=col_names)\n",
+    "\n",
+    "    return records"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def clean_pm(records):\n",
+    "    df = records.copy()\n",
+    "\n",
+    "    df[\"SIGNAL_ID\"] = df[\"signal\"].str.split(\"|\").str[0]\n",
+    "\n",
+    "    # rename record_id to fulcrum ID\n",
+    "    df = df.rename(columns={'_record_id': 'FULCRUM_ID'})\n",
+    "\n",
+    "    df[\"_server_updated_at\"] = df[\"_server_updated_at\"].str.strip(\"CDT\")\n",
+    "    df[\"PM_COMPLETED_DATETIME\"] = pd.to_datetime(df[\"_server_updated_at\"], format = \"%Y-%m-%d %H:%M:%S\")\n",
+    "    df[\"PM_COMPLETED_DATE\"] = df[\"PM_COMPLETED_DATETIME\"].dt.date\n",
+    "\n",
+    "    df[\"PM_COMPLETED_BY\"] = df[\"technicians\"].str.split(\",\").str[1]\n",
+    "    df[\"modified_current\"] = datetime.now().replace(microsecond=0).isoformat(\" \")\n",
+    "\n",
+    "    df[\"modified_current\"] =pd.to_datetime(df[\"modified_current\"], format = \"%Y-%m-%d %H:%M:%S\")\n",
+    "\n",
+    "    df[\"MODIFIED_DATE\"] = df[\"modified_current\"] + timedelta(minutes = 20)\n",
+    "\n",
+    "    df = df[[\"SIGNAL_ID\", \"FULCRUM_ID\", \"PM_COMPLETED_DATE\", \"MODIFIED_DATE\", \"PM_COMPLETED_BY\"]]\n",
+    "\n",
+    "    return df"
    ]
   },
   {
@@ -212,6 +283,36 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "list indices must be integers or slices, not str",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-29-684c40636d0e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m# print(forms)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mcol_names\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_col_names\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mform_id\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mrecords\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_records\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mform_id\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mrecords\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minterpret_col_name\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrecords\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-26-d11a150676f3>\u001b[0m in \u001b[0;36mget_records\u001b[0;34m(form_id)\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0mrecords_dirty\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrecords_dirty\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"records\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m     \u001b[0mrecords\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfrom_dict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrecords_dirty\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"form_values\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mrecords\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: list indices must be integers or slices, not str"
+     ]
+    }
+   ],
+   "source": [
+    "fulcrum = fc.Fulcrum(key = key)\n",
+    "forms = fulcrum.forms.search(url_params={'id': form_id})\n",
+    "# print(forms)\n",
+    "col_names = get_col_names(form_id)\n",
+    "records = get_records(form_id)\n",
+    "\n",
+    "records = interpret_col_name(records)\n",
+    "\n",
+    "print(list(records))"
+   ]
   },
   {
    "cell_type": "code",
